# business-intelligence-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
datasets/dataset_multiple_tables/olist_db/: rag_test_questions.md
datasets/dataset_multiple_tables/wrs_ehr_db/: appointments.csv  diagnoses.csv  ehr_database_docs.md  facilities.csv  insurance_plans.csv  lab_results.csv  patients.csv  prescriptions.csv  providers.csv  rag_test_questions.md
src/: STRUCTURE.md  __init__.py  app_multi_basic.py  app_multi_rag.py  app_single_basic.py  app_single_rag.py
src/config/: __init__.py  logging_config.py  models.py  settings.py
src/config/prompts/: __init__.py  templates.py
src/core/: __init__.py  database.py  llm_client.py  rag.py
src/db/: __init__.py
src/utils/: database_setup_multiple_tables_olist.py  database_setup_multiple_tables_wrs.py  database_setup_single_table.py
